Pierwsze style etc

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,8 +2,41 @@
 
 {% block body %}
     <div class="container">
-        <div id="welcome">
-            <h1>SOON...</h1>
+        <div class="row">
+            <div class="col-xl-8">
+                <div class="mf-badge mf-badge-unlocked">
+                    <div class="mf-badge-icon">
+                        <i>ICON</i>
+                    </div>
+                    <div class="mf-badge-content">
+                        <h3 class="mf-badge-content-title">Baby steps</h3>
+                        <p class="mf-badge-content-desc">Pierwszy commit</p>
+                    </div>
+                    <div class="mf-badge-date">
+                        <div class="mf-badge-date-label">unlock</div>
+                        <div class="mf-badge-date-value">30.11.2017</div>
+                    </div>
+                </div>
+
+                <div class="mf-badge mf-badge-locked">
+                    <div class="mf-badge-icon">
+                        <i>ICON</i>
+                    </div>
+                    <div class="mf-badge-content">
+                        <h3 class="mf-badge-content-title">Good job kid!</h3>
+                        <p class="mf-badge-content-desc">100 commitów jednego autora</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 24%" aria-valuenow="24" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="progress-value">
+                            24/100
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4">
+                Right Column
+            </div>
         </div>
     </div>
 {% endblock %}
