--- a/app/Resources/views/panel/index.html.twig
+++ b/app/Resources/views/panel/index.html.twig
@@ -34,20 +34,20 @@
         <tbody>
         {% for badge in badges %}
             <tr>
-                <td>{{ bages.id }}</td>
-                <td>{{ bages.name }}</td>
-                <td>{{ bages.description }}</td>
+                <td>{{ badge.id }}</td>
+                <td>{{ badge.name }}</td>
+                <td>{{ badge.description }}</td>
                 <td></td>
 
                 <!--
                 <td class="text-right">
                     <div class="item-actions">
-                        <a href="{{ path('admin_post_show', {id: post.id}) }}" class="btn btn-sm btn-default">
-                            <i class="fa fa-eye" aria-hidden="true"></i> {{ 'action.show'|trans }}
+                        <a href="{*{ path('admin_post_show', {id: post.id}) }}" class="btn btn-sm btn-default">
+                            <i class="fa fa-eye" aria-hidden="true"></i> {*{ 'action.show'|trans }}
                         </a>
 
-                        <a href="{{ path('admin_post_edit', {id: post.id}) }}" class="btn btn-sm btn-primary">
-                            <i class="fa fa-edit" aria-hidden="true"></i> {{ 'action.edit'|trans }}
+                        <a href="{*{ path('admin_post_edit', {id: post.id}) }}" class="btn btn-sm btn-primary">
+                            <i class="fa fa-edit" aria-hidden="true"></i> {*{ 'action.edit'|trans }}
                         </a>
                     </div>
                 </td>
