--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col-xl-8">
+            <div class="content-main col-xl-8">
                 <div class="mf-badge mf-badge-unlocked">
                     <div class="mf-badge-icon">
                         <i>ICON</i>
@@ -34,8 +34,26 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4">
-                Right Column
+            <div class="content-sidebar col-xl-4">
+                <div class="widget">
+                    <div class="widget-title">Activity stream</div>
+                    <div class="widget-body stream">
+                        <div class="stream-item">
+                            <div class="stream-item-avatar">
+                                <img src="/assets/images/avatar.png" alt="">
+                            </div>
+                            <div class="stream-item-content">
+                                <h5 class="stream-item-content-title">EdekKredek</h5>
+                                <div class="stream-item-content-desc">
+                                    unlocked: <strong>Baby steps</strong>
+                                </div>
+                            </div>
+                            <div class="stream-item-date">
+                                <span>30.11.2017</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
