--- a/web/assets/styles/_header.less
+++ b/web/assets/styles/_header.less
@@ -7,3 +7,47 @@
         font-weight: 700;
     }
 }
+
+.profile {
+    list-style: none;
+
+    &-content {
+        left: auto;
+        right: 0;
+    }
+
+    &-avatar {
+        margin-left: 10px;
+    }
+
+    .dropdown-toggle {
+        color: #000;
+
+        &::after {
+            display: none;
+        }
+
+        span {
+            margin-right: 3px;
+        }
+    }
+}
+
+.navbar-login
+{
+    width: 305px;
+    padding: 10px;
+    padding-bottom: 0px;
+}
+
+.navbar-login-session
+{
+    padding: 10px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
+
+.icon-size
+{
+    font-size: 87px;
+}
