--- a/web/assets/styles/style.less
+++ b/web/assets/styles/style.less
@@ -1,9 +1,12 @@
 @import './libs/bootstrap.less';
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&subset=latin-ext');
 
+@import '_base';
 @import '_header';
 @import '_badges';
+@import '_widget';
+@import '_content';
 
 body {
     background: #f3f3f3;
