--- a/app/Resources/views/panel/Badge/add_badge.html.twig
+++ b/app/Resources/views/panel/Badge/add_badge.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container">
         <div id="welcome">
-            <h1>PANEL</h1>
+            <h1>ADD BADGE</h1>
         </div>
 
         {% block header_navigation_links %}
@@ -16,11 +16,6 @@
             <li>
                 <a href="{{ path('admin_panel_user_assign_badge') }}">
                     <i class="fa fa-list-alt" aria-hidden="true"></i> {{ 'menu.assign_badge'|trans }}
-                </a>
-            </li>
-            <li>
-                <a href="{{ path('admin_panel_badge_add') }}">
-                    <i class="fa fa-home" aria-hidden="true"></i> {{ 'menu.add_badge'|trans }}
                 </a>
             </li>
         {% endblock %}
