--- a/web/assets/styles/_badges.less
+++ b/web/assets/styles/_badges.less
@@ -14,13 +14,10 @@
 
     &-icon {
 
-        i {
+        svg {
             width: 100px;
             height: 100px;
             border-radius: 50%;
-            background: #ffc431;
-            color: transparent;
-            display: inline-block;
         }
     }
     
