--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
 </head>
 <body>
-<h1>LOGIN|REGISTER</h1>
 <div>
-    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-        {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-        <a href="{{ path('fos_user_security_logout') }}">
-            {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+    <!--
+    {*8% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+        {*{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
+        <a href="{*{ path('fos_user_security_logout') }}">
+            {*{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
         </a>
-    {% else %}
-        <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
-    {% endif %}
+    {*% else %}
+        <a href="{*{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+    {*% endif %}
+    -->
 </div>
 
 {% for type, messages in app.session.flashBag.all %}
