--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -33,6 +33,33 @@
                         </div>
                     </div>
                 </div>
+
+                {% for badgeWithProgress in allBadgesWithProgress %}
+                    <div class="mf-badge mf-badge-locked">
+                        <div class="mf-badge-icon">
+                            {% if badgeWithProgress.state != '3' %}
+                                {% embed '@app_views/components/icons.twig' with { icon: 'lock' } %}{% endembed %}
+                            {% else %}
+                                {% embed '@app_views/components/icons.twig' with { icon: 'baby_step' } %}{% endembed %}
+                            {% endif %}
+                        </div>
+                        <div class="mf-badge-content">
+                            <h3 class="mf-badge-content-title">{{ badgeWithProgress.badge.name }}</h3>
+                            <p class="mf-badge-content-desc">{{ badgeWithProgress.badge.description }}</p>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: {{ badgeWithProgress.progress }}%" aria-valuenow="{{ badgeWithProgress.progress }}" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            {% if badgeWithProgress.state != '3' %}
+                                <div class="progress-value">
+                                    {{ badgeWithProgress.progress }}/100
+                                </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                {% endfor %}
+
+                {{ dump(allBadgesWithProgress) }}
+
             </div>
             <div class="content-sidebar col-xl-4">
                 <div class="widget">
@@ -57,4 +84,11 @@
             </div>
         </div>
     </div>
+    {% for badgeWithProgress in allBadgesWithProgress %}
+        <span class="clearfix">{{ badgeWithProgress.badge.name }}</span>
+        <span class="clearfix">{{ badgeWithProgress.badge.description }}</span>
+        <span class="clearfix">{{ badgeWithProgress.state }}</span>
+        <span class="clearfix">{{ badgeWithProgress.progress }}%</span>
+
+    {% endfor %}
 {% endblock %}
