--- a/web/assets/styles/_base.less
+++ b/web/assets/styles/_base.less
@@ -13,3 +13,12 @@ img {
 .avatar {
     border-radius: 50%;
 }
+
+input[type='submit'] {
+    &:extend(.btn);
+    &:extend(.btn-primary);
+    font-family: 'Roboto', sans-serif;
+    border-radius: 22px;
+    font-size: 14px;
+    padding: 10px 40px;
+}
