--- a/web/assets/styles/style.less
+++ b/web/assets/styles/style.less
@@ -7,6 +7,8 @@
 @import '_badges';
 @import '_widget';
 @import '_content';
+@import '_form';
+@import '_page_sign_in';
 
 body {
     background: #f3f3f3;
