--- a/web/assets/styles/_base.less
+++ b/web/assets/styles/_base.less
@@ -22,3 +22,9 @@ input[type='submit'] {
     font-size: 14px;
     padding: 10px 40px;
 }
+
+.btn {
+    border-radius: 22px;
+    font-size: 14px;
+    padding: 10px 40px;
+}
