--- a/app/Resources/views/panel/UserBadge/index.html.twig
+++ b/app/Resources/views/panel/UserBadge/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% set stateCompleted = '2' %}
+
 {% block body %}
     <h1>ASSIGN BADGES TO USER</h1>
 
@@ -27,16 +29,22 @@
         </tr>
         </thead>
         <tbody>
-        {% for badge in badges %}
+        {% for badgeWithProgress in allBadgesWithProgress %}
             <tr>
-                <td>{{ badge.id }}</td>
-                <td>{{ badge.name }}</td>
-                <td>{{ badge.description }}</td>
+                <td>{{ badgeWithProgress.badge.id }}</td>
+                <td>{{ badgeWithProgress.badge.name }}</td>
+                <td>{{ badgeWithProgress.badge.description }}</td>
                 <td class="text-right">
                     <div>
-                        <a href="{{ path('admin_panel_user_badge_activate', {'userId': user_id, 'badgeId': badge.id}) }}">
+                    {% if badgeWithProgress.state == stateCompleted %}
+                        <a href="{{ path('admin_panel_user_badge_activate', {'id':badgeWithProgress.id}) }}">
+                            <i></i> {{ 'action.unactivate'|trans }}
+                        </a>
+                    {% else %}
+                        <a href="{{ path('admin_panel_user_badge_unactivate', {'id': badgeWithProgress.id}) }}">
                             <i></i> {{ 'action.activate'|trans }}
                         </a>
+                    {% endif %}
                     </div>
                 </td>
 
