--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -36,5 +36,7 @@
         </div>
     {% endblock fos_user_content %}
 </div>
+<script src="/assets/js/svg4everybody.js"></script>
+<script>svg4everybody();</script>
 </body>
 </html>
