--- a/app/Resources/views/panel/Badge/add_badge.html.twig
+++ b/app/Resources/views/panel/Badge/add_badge.html.twig
@@ -8,14 +8,14 @@
 
         {% block header_navigation_links %}
             <li>
-                <a href="{{ path('admin_panel_index') }}">
-                    <i class="fa fa-home" aria-hidden="true"></i> {{ 'menu.index'|trans }}
+                <a href="{{ path('admin_panel_user_index') }}">
+                    <i class="fa fa-home" aria-hidden="true"></i> {{ 'menu.user.index'|trans }}
                 </a>
             </li>
 
             <li>
-                <a href="{{ path('admin_panel_user_assign_badge') }}">
-                    <i class="fa fa-list-alt" aria-hidden="true"></i> {{ 'menu.assign_badge'|trans }}
+                <a href="{{ path('admin_panel_badge_index') }}">
+                    <i class="fa fa-list-alt" aria-hidden="true"></i> {{ 'menu.badge.index'|trans }}
                 </a>
             </li>
         {% endblock %}
