--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -69,6 +69,12 @@
                                 </div>
                             {% endif %}
                         </div>
+                        {% if badgeWithProgress.state == stateCompleted %}
+                            <div class="mf-badge-date">
+                                <div class="mf-badge-date-label">unlocked</div>
+                                <div class="mf-badge-date-value">{{ badgeWithProgress.unlockDate|date("m/d/Y") }}</div>
+                            </div>
+                        {% endif %}
                     </div>
                 {% endfor %}
 
